--- a/css/KnuckleBones.css
+++ b/css/KnuckleBones.css
@@ -18,6 +18,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     height: 100%;
+    margin-top: -3vh;
 }
 
 .main-container > div {
