--- a/css/KnuckleBones.css
+++ b/css/KnuckleBones.css
@@ -11,6 +11,7 @@ body {
     height: 100vh;
     background-color: rgb(248, 248, 248);
     overflow:hidden;
+    display: flex;
 }
 
 .main-container {
@@ -18,6 +19,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     height: 100%;
+    margin-bottom: -4vh;
 }
 
 .main-container > div {
